@@ -11014,13 +11014,11 @@ BUILDIN_FUNC(specialeffect2)
 	int type = script_getnum(st,2);
 	enum send_target target = script_hasdata(st,3) ? (send_target)script_getnum(st,3) : AREA;
 
-	if(sd==NULL)
-		return 0;
-
 	if( script_hasdata(st,4) )
 		sd = map_nick2sd(script_getstr(st,4));
 
-	clif_specialeffect(&sd->bl, type, target);
+	if (sd)
+		clif_specialeffect(&sd->bl, type, target);
 
 	return 0;
 }
